style table, logo image

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,9 +11,11 @@
     <div class="container">
       <header>
         <img src="images/icon.png" class="icon" />
-        <h1>Koala Holla</h1>
-        <h3>1976 Llama Comma Drive</h2>
-        <h3>Walla Walla, WA</h2>
+        <div class="address">
+          <h1>Koala Holla</h1>
+          <h3>1976 Llama Comma Drive</h2>
+          <h3>Walla Walla, WA</h2>
+        </div>
       </header>
       <section id="addKoala">
         <h2>Add Koala</h2>
@@ -29,13 +31,13 @@
         <table>
           <thead>
             <tr>
-              <th>Name</th>
-              <th>Age</th>
-              <th>Gender</th>
-              <th>Ready for Transfer</th>
-              <th>Notes</th>
+              <th class="name">Name</th>
+              <th class="age">Age</th>
+              <th class="gender">Gender</th>
+              <th class="transfer">Ready for Transfer</th>
+              <th class="notes">Notes</th>
               <th>Mark Ready</th>
-              <th>Remove</th>
+              <th class="remove">Remove</th>
             </tr>
           </thead>
           <tbody id="viewKoalas">
