--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,6 +18,10 @@
           <h3>Walla Walla, WA</h2>
         </div>
       </header>
+      <section>
+        <input type="text" id="koalaSearchBox" placeholder="Search for anything">
+        <button type="button" id="searchKoalaBtn">Search Table</button>
+      </section>
       <section id="addKoala">
         <h2>Add Koala</h2>
         <input type="text" id="nameIn" pattern="[A-Za-z]{20}" required="required" placeholder="Name">
