fixed search feature

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -19,7 +19,7 @@
         </div>
       </header>
       <section>
-        <input type="text" id="koalaSearchBox" placeholder="Search for anything">
+        <input type="text" id="koalaSearchBox" placeholder="Search for Koalas!">
         <button type="button" id="searchKoalaBtn">Search Table</button>
       </section>
       <section id="addKoala">
