--- a/server/public/index.html
+++ b/server/public/index.html
@@ -21,6 +21,7 @@
       <section>
         <input type="text" id="koalaSearchBox" placeholder="Search for anything">
         <button type="button" id="searchKoalaBtn">Search Table</button>
+        <button type="button" id="clearSearch">Clear</button>
       </section>
       <section id="addKoala">
         <h2>Add Koala</h2>
